fix control panel on iOS

--- a/html/css/index.css
+++ b/html/css/index.css
@@ -75,6 +75,7 @@ td {
 }
 
 button {
+  padding: 0;
   font-size: 30px;
   margin-right: 1.5em;
   margin-bottom: 1.5em;
